Project renamed to easily target it by Composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "symplify/statie",
+    "name": "drdplusinfo/statie",
     "description": "Static Site Generator",
     "license": "MIT",
     "bin": [
