--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "J7mbo/twitter-api-php": "^1.0",
         "nette/finder": "^2.4",
-        "nette/utils": "^2.5|^3.0",
+        "nette/utils": "^2.5",
         "tracy/tracy": "^2.5",
         "twig/twig": "^2.5",
         "symfony/config": "^3.4|^4.1",
@@ -24,7 +24,7 @@
         "symfony/console": "^3.4|^4.1",
         "symfony/finder": "^3.4|^4.1",
         "symfony/yaml": "^3.4|^4.1",
-        "symplify/package-builder": "^5.5",
+        "symplify/package-builder": "^5.4.9",
         "jean85/pretty-package-versions": "^1.2",
         "ocramius/package-versions": "^1.3"
     },
