--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "J7mbo/twitter-api-php": "^1.0",
         "nette/finder": "^2.4",
-        "nette/utils": "^2.5",
+        "nette/utils": "^2.5|^3.0",
         "tracy/tracy": "^2.5",
         "twig/twig": "^2.5",
         "symfony/config": "^3.4|^4.1",
@@ -26,7 +26,8 @@
         "symfony/yaml": "^3.4|^4.1",
         "symplify/package-builder": "^5.4.9",
         "jean85/pretty-package-versions": "^1.2",
-        "ocramius/package-versions": "^1.3"
+        "ocramius/package-versions": "^1.3",
+        "symfony/dotenv": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
