--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "php": "^7.1",
         "erusev/parsedown-extra": "^0.7.1",
         "erusev/parsedown": "^1.7",
-        "composer/xdebug-handler": "^1.3",
         "latte/latte": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "J7mbo/twitter-api-php": "^1.0",
@@ -24,10 +23,7 @@
         "symfony/console": "^3.4|^4.1",
         "symfony/finder": "^3.4|^4.1",
         "symfony/yaml": "^3.4|^4.1",
-        "symplify/package-builder": "^5.4.9",
-        "jean85/pretty-package-versions": "^1.2",
-        "ocramius/package-versions": "^1.3",
-        "symfony/dotenv": "^4.2"
+        "symplify/package-builder": "^5.4.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
@@ -59,12 +55,5 @@
             "Symplify\\Statie\\Tweeter\\Tests\\": "packages/Tweeter/tests",
             "Symplify\\Statie\\HeadlineAnchorLinker\\Tests\\": "packages/HeadlineAnchorLinker/tests"
         }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "5.5-dev"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
