--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/console": "^3.4|^4.1",
         "symfony/finder": "^3.4|^4.1",
         "symfony/yaml": "^3.4|^4.1",
-        "symplify/package-builder": "^5.4.9"
+        "symplify/package-builder": "^5.4.9",
+        "symfony/dotenv": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
