--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/yaml": "^3.4|^4.1",
         "symplify/package-builder": "^5.4.9",
         "symfony/dotenv": "^4.2",
-        "phpgt/dom": "^1.1"
+        "phpgt/dom": "^1.1",
+        "granam/string": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
