--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,6 @@
     "require": {
         "php": "^7.1",
         "ext-dom": "*",
-        "erusev/parsedown-extra": "^0.7.1",
-        "erusev/parsedown": "^1.7",
         "latte/latte": "^2.5",
         "guzzlehttp/guzzle": "^6.3",
         "j7mbo/twitter-api-php": "^1.0",
@@ -27,7 +25,9 @@
         "symplify/package-builder": "^5.4.9",
         "symfony/dotenv": "^4.2",
         "phpgt/dom": "^2.1",
-        "granam/string": "^4.0"
+        "granam/string": "^4.0",
+        "erusev/parsedown": "^1.7",
+        "erusev/parsedown-extra": "^0.8.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
