--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "phpgt/dom": "^2.1",
         "granam/string": "^4.0",
         "erusev/parsedown": "^1.7",
-        "erusev/parsedown-extra": "^0.8.1"
+        "erusev/parsedown-extra": "^0.8.1",
+        "granam/web-content-builder": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
