--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
         "granam/string": "^4.0",
         "erusev/parsedown": "^1.7",
         "erusev/parsedown-extra": "^0.8.1",
-        "granam/web-content-builder": "^2.1",
-        "symplify/package-builder": "^5.4"
+        "symplify/package-builder": "^5.4",
+        "symfony/expression-language": "^5.1",
+        "granam/assets-version": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5|^8.0"
