Asset versions are injected to every file

--- a/packages/Generator/tests/GeneratorSource/statie.yml
+++ b/packages/Generator/tests/GeneratorSource/statie.yml
@@ -14,3 +14,5 @@ parameters:
             route_prefix: 'lecture'
             # object
             object: 'Symplify\Statie\Generator\Tests\GeneratorSource\File\LectureFile'
+    assets:
+        auto_version_excluding_regexp: '~statie-(blog|post)[.]png$~'
