--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,5 @@ services:
     Symfony\Component\Filesystem\Filesystem: ~
 
     Symplify\PackageBuilder\Console\Style\SymfonyStyleFactory: ~
+
+    Granam\AssetsVersion\AssetsVersionInjector: ~
