--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "bin/statie"
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "ext-dom": "*",
         "latte/latte": "^2.5",
         "guzzlehttp/guzzle": "^6.3",
