--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^7.1|^8.0",
         "ext-dom": "*",
-        "latte/latte": "^2.5",
+        "latte/latte": "^2.5|^3.0",
         "guzzlehttp/guzzle": "^6.3",
         "j7mbo/twitter-api-php": "^1.0",
         "nette/finder": "^2.4",
