--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,23 @@
         "latte/latte": "^2.5|^3.0",
         "guzzlehttp/guzzle": "^6.3",
         "j7mbo/twitter-api-php": "^1.0",
-        "nette/finder": "^2.4",
-        "nette/utils": "^2.5|^3.0",
+        "nette/finder": "^2.4|^3.0",
+        "nette/utils": "^2.5|^3.0|^4.0",
         "tracy/tracy": "^2.5",
         "twig/twig": "^2.5",
-        "symfony/config": "^3.4|^4.1",
-        "symfony/dependency-injection": "^3.4|^4.1",
-        "symfony/event-dispatcher": "^3.4|^4.1",
-        "symfony/http-kernel": "^3.4|^4.1",
-        "symfony/console": "^3.4|^4.1",
-        "symfony/finder": "^3.4|^4.1",
-        "symfony/yaml": "^3.4|^4.1",
+        "symfony/config": "^3.4|^4.1|^5.0|^6.0",
+        "symfony/dependency-injection": "^3.4|^4.1|^5.0|^6.0",
+        "symfony/event-dispatcher": "^3.4|^4.1|^5.0|^6.0",
+        "symfony/http-kernel": "^3.4|^4.1|^5.0|^6.0",
+        "symfony/console": "^3.4|^4.1|^5.0|^6.0",
+        "symfony/finder": "^3.4|^4.1|^5.0|^6.0",
+        "symfony/yaml": "^3.4|^4.1|^5.0|^6.0",
         "symfony/dotenv": "^4.2",
         "phpgt/dom": "^2.1",
         "granam/string": "^4.0",
         "erusev/parsedown": "^1.7",
         "erusev/parsedown-extra": "^0.8.1",
-        "symplify/package-builder": "^5.4",
+        "symplify/package-builder": ">=5.4",
         "symfony/expression-language": "^5.1",
         "granam/assets-version": "^2.0"
     },
